--- a/trunk/GazdalkodjOkosan/GazdalkodjOkosan/GazdalkodjOkosan.csproj
+++ b/trunk/GazdalkodjOkosan/GazdalkodjOkosan/GazdalkodjOkosan.csproj
@@ -46,12 +46,45 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Control\ClientController.cs" />
+    <Compile Include="Control\GameEngine.cs" />
+    <Compile Include="Model\Actions\Ban.cs" />
+    <Compile Include="Model\Actions\BookShop.cs" />
+    <Compile Include="Model\Actions\BuyBook.cs" />
+    <Compile Include="Model\Actions\BuyFurniture.cs" />
+    <Compile Include="Model\Actions\BuyHouse.cs" />
+    <Compile Include="Model\Actions\BuyInsurance.cs" />
+    <Compile Include="Model\Actions\BuySavingBook.cs" />
+    <Compile Include="Model\Actions\DrawLuckyCard.cs" />
+    <Compile Include="Model\Actions\Fee.cs" />
+    <Compile Include="Model\Actions\Fine.cs" />
+    <Compile Include="Model\Actions\FurnitureShop.cs" />
+    <Compile Include="Model\Actions\Go.cs" />
+    <Compile Include="Model\Actions\GoTo.cs" />
+    <Compile Include="Model\Actions\HouseFire.cs" />
+    <Compile Include="Model\Actions\HouseShop.cs" />
+    <Compile Include="Model\Actions\IAction.cs" />
+    <Compile Include="Control\IController.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\Actions\InsuranceShop.cs" />
+    <Compile Include="Model\Actions\Nothing.cs" />
+    <Compile Include="Model\Actions\PlusRolls.cs" />
+    <Compile Include="Model\Actions\SavingBookInterest.cs" />
+    <Compile Include="Model\Actions\StartField.cs" />
+    <Compile Include="Model\Actions\WinFurniture.cs" />
+    <Compile Include="Model\Game\Dice.cs" />
+    <Compile Include="Model\Game\EInsurance.cs" />
+    <Compile Include="Model\Game\Field.cs" />
+    <Compile Include="Model\Game\House.cs" />
+    <Compile Include="Model\Game\LuckyCard.cs" />
+    <Compile Include="Model\Game\PieceOfFurniture.cs" />
+    <Compile Include="Model\Game\Player.cs" />
+    <Compile Include="Model\Game\Table.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -73,9 +106,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Engine\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
