--- a/trunk/GazdalkodjOkosan/Gazdalkodj_Okosan/Gazdalkodj_Okosan.csproj
+++ b/trunk/GazdalkodjOkosan/Gazdalkodj_Okosan/Gazdalkodj_Okosan.csproj
@@ -55,10 +55,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BoardWindow.xaml.cs">
+      <DependentUpon>BoardWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Model\Network\NetworkManager.cs" />
     <Compile Include="NameInputDialog.xaml.cs">
       <DependentUpon>NameInputDialog.xaml</DependentUpon>
     </Compile>
+    <Page Include="BoardWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -138,7 +145,7 @@
     <Resource Include="img\main.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="img\new_game.png" />
+    <Resource Include="img\Board.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
